{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 172,
  "lineage": "b3ca1434-cfc7-1637-b1c6-800894671d47",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e872aee57663ae2d",
            "arn": "arn:aws:ec2:eu-central-1:024848450401:instance/i-0a0cd7335e37e8a8c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a0cd7335e37e8a8c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Akey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f4dc6aed1f323ced",
            "private_dns": "ip-10-0-1-237.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.237",
            "public_dns": "ec2-18-185-40-235.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.185.40.235",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09b06cc11acf37859",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01e4829930284d5f1",
            "tags": {
              "Name": "kubernetes-master"
            },
            "tags_all": {
              "Name": "kubernetes-master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09939181726f9b1a5"
            ]
          },
          "dependencies": [
            "aws_security_group.k8s_master_sg",
            "aws_subnet.k8s_subnet",
            "aws_vpc.k8s_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s_workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e872aee57663ae2d",
            "arn": "arn:aws:ec2:eu-central-1:024848450401:instance/i-0a900a5973029accb",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a900a5973029accb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Akey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ff085091499ca679",
            "private_dns": "ip-10-0-1-30.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.30",
            "public_dns": "ec2-3-125-6-121.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.125.6.121",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d11ef984834c8254",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01e4829930284d5f1",
            "tags": {
              "Name": "kubernetes-worker-1"
            },
            "tags_all": {
              "Name": "kubernetes-worker-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00d688101a5643fa7"
            ]
          },
          "dependencies": [
            "aws_security_group.k8s_master_sg",
            "aws_security_group.k8s_worker_sg",
            "aws_subnet.k8s_subnet",
            "aws_vpc.k8s_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e872aee57663ae2d",
            "arn": "arn:aws:ec2:eu-central-1:024848450401:instance/i-09d7bc846bb71c849",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09d7bc846bb71c849",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Akey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-099b2c244ac166f7a",
            "private_dns": "ip-10-0-2-38.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.38",
            "public_dns": "ec2-35-157-139-136.eu-central-1.compute.amazonaws.com",
            "public_ip": "35.157.139.136",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c90fa833a58d7d38",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06627401bcdf47530",
            "tags": {
              "Name": "kubernetes-worker-2"
            },
            "tags_all": {
              "Name": "kubernetes-worker-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00d688101a5643fa7"
            ]
          },
          "dependencies": [
            "aws_security_group.k8s_master_sg",
            "aws_security_group.k8s_worker_sg",
            "aws_subnet.k8s_subnet",
            "aws_vpc.k8s_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "k8s_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:024848450401:internet-gateway/igw-07dfbf398ba3ba17a",
            "id": "igw-07dfbf398ba3ba17a",
            "owner_id": "024848450401",
            "tags": {
              "Name": "kubernetes-igw"
            },
            "tags_all": {
              "Name": "kubernetes-igw"
            },
            "vpc_id": "vpc-0bc5b10a442a09099"
          },
          "dependencies": [
            "aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "k8s_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:024848450401:route-table/rtb-00acc4f34632858b7",
            "id": "rtb-00acc4f34632858b7",
            "owner_id": "024848450401",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07dfbf398ba3ba17a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kubernetes-rt"
            },
            "tags_all": {
              "Name": "kubernetes-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc5b10a442a09099"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.k8s_igw",
            "aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "k8s_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b20eae5d99c6798",
            "route_table_id": "rtb-00acc4f34632858b7",
            "subnet_id": "subnet-01e4829930284d5f1"
          },
          "dependencies": [
            "aws_internet_gateway.k8s_igw",
            "aws_route_table.k8s_rt",
            "aws_subnet.k8s_subnet",
            "aws_vpc.k8s_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c31d368dc1ded056",
            "route_table_id": "rtb-00acc4f34632858b7",
            "subnet_id": "subnet-06627401bcdf47530"
          },
          "dependencies": [
            "aws_internet_gateway.k8s_igw",
            "aws_route_table.k8s_rt",
            "aws_subnet.k8s_subnet",
            "aws_vpc.k8s_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8s_master_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:024848450401:security-group/sg-09939181726f9b1a5",
            "description": "Security group for Kubernetes master",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09939181726f9b1a5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "k8s-master-sg",
            "name_prefix": "",
            "owner_id": "024848450401",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kubernetes-master-sg"
            },
            "tags_all": {
              "Name": "kubernetes-master-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc5b10a442a09099"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8s_worker_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:024848450401:security-group/sg-00d688101a5643fa7",
            "description": "Security group for Kubernetes workers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00d688101a5643fa7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-09939181726f9b1a5"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "k8s-worker-sg",
            "name_prefix": "",
            "owner_id": "024848450401",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kubernetes-worker-sg"
            },
            "tags_all": {
              "Name": "kubernetes-worker-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc5b10a442a09099"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.k8s_master_sg",
            "aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "k8s_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:024848450401:subnet/subnet-01e4829930284d5f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e4829930284d5f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "024848450401",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kubernetes-subnet-1"
            },
            "tags_all": {
              "Name": "kubernetes-subnet-1"
            },
            "vpc_id": "vpc-0bc5b10a442a09099"
          },
          "dependencies": [
            "aws_vpc.k8s_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:024848450401:subnet/subnet-06627401bcdf47530",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06627401bcdf47530",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "024848450401",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kubernetes-subnet-2"
            },
            "tags_all": {
              "Name": "kubernetes-subnet-2"
            },
            "vpc_id": "vpc-0bc5b10a442a09099"
          },
          "dependencies": [
            "aws_vpc.k8s_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "k8s_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:024848450401:vpc/vpc-0bc5b10a442a09099",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-005176427e8147c48",
            "default_route_table_id": "rtb-0930362553f41e137",
            "default_security_group_id": "sg-0cfeaed26757f920b",
            "dhcp_options_id": "dopt-091241d6968fe5d80",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bc5b10a442a09099",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0930362553f41e137",
            "owner_id": "024848450401",
            "tags": {
              "Name": "kubernetes-vpc"
            },
            "tags_all": {
              "Name": "kubernetes-vpc"
            }
          }
        }
      ]
    }
  ]
}